<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.UserRegisterActivity"
    android:background="@color/common_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:orientation="vertical"
        android:background="@drawable/border_corner_all">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/mMobileEditText"
                      android:background="@null"
                      android:paddingLeft="@dimen/common_padding_small"
                      android:layout_width="0dp"
                      android:layout_height="@dimen/common_line_height"
                      android:hint="@string/please_input_phoneNumber"
                      android:drawableLeft="@drawable/icon_phone"
                      android:drawablePadding="@dimen/common_padding_small"
                      android:layout_weight="1.0"
                      android:inputType="phone"/>
            <View style="@style/DividerFixedWidth.MarginTopBottom"/>
            <com.qiyei.framework.view.VerifyButton
                style="@style/verifyCodeStyle"
                android:id="@+id/mVerifyCodeButton"
                android:textColor="@color/common_blue"
                android:background="@null"
                android:text="获取验证码"/>
        </LinearLayout>
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/mVerifyCodeEditText"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:hint="@string/please_input_message_verifyCode"
                  android:drawableLeft="@drawable/icon_verify_code"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="number"
            />
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/mPasswordEditText"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:hint="@string/please_input_password_6_20"
                  android:drawableLeft="@drawable/icon_pwd"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="textPassword"/>
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/mPasswordConfirmEditText"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:hint="@string/please_input_password_again"
                  android:drawableLeft="@drawable/icon_pwd"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="textPassword"/>
    </LinearLayout>

    <Button android:id="@+id/mRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/common_white"
            android:background="@drawable/btn_common_selector"
            android:padding="@dimen/common_padding_middle"
            android:layout_margin="@dimen/common_margin"
            android:enabled="false"
            android:text="@string/common_register"/>
</LinearLayout>